/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "coin/chain/crypto/core/data/dark_theme_config.proto";
import "coin/chain/crypto/core/data/theme_brand.proto";

option java_package = "user_preferences.proto";
option java_multiple_files = true;

message UserPreferences {
    reserved 2;
    repeated int32 deprecated_int_followed_topic_ids = 1;
    bool has_done_int_to_string_id_migration = 3;
    repeated string deprecated_followed_topic_ids = 4;
    bool has_done_list_to_map_migration = 5;

    // Each map is used to store a set of string IDs. The bool has no meaning, but proto3 doesn't
    // have a Set type so this is the closest we can get to a Set.
    map<string, bool> followed_topic_ids = 6;
    map<string, bool> viewed_news_resource_ids = 7;

    ThemeBrandProto theme_brand = 8;
    DarkThemeConfigProto dark_theme_config = 9;

    bool should_hide_onboarding = 10;

    bool use_dynamic_color = 11;

    // NEXT AVAILABLE ID: 12
}
